--- a/src/assets/i18n/messages/errors/en.json
+++ b/src/assets/i18n/messages/errors/en.json
@@ -111,5 +111,6 @@
   "experience-not-found": "Experience not found",
   "experience-position-not-found": "Experience position not found",
   "tag-is-already-on-the-list": "Tag is already on the list",
+  "is-already-on-the-list": "Is already on the list",
   "social-not-found": "Social not found"
 }
