--- a/src/assets/i18n/messages/errors/pl.json
+++ b/src/assets/i18n/messages/errors/pl.json
@@ -111,5 +111,6 @@
   "experience-not-found": "Doświadczenie nie zostało znalezione",
   "experience-position-not-found": "Nie znaleziono pozycji doświadczenia",
   "tag-is-already-on-the-list": "Tag jest już na liście",
+  "is-already-on-the-list": "Jest już na liście",
   "social-not-found": "Nie znaleziono społeczności"
 }
