--- a/src/assets/i18n/messages/errors/ru.json
+++ b/src/assets/i18n/messages/errors/ru.json
@@ -111,5 +111,6 @@
   "experience-not-found": "Опыт не найден",
   "experience-position-not-found": "Опытная позиция не найдена",
   "tag-is-already-on-the-list": "Тег уже есть в списке",
+  "is-already-on-the-list": "Уже есть в списке",
   "social-not-found": "Социальные сети не найдены"
 }
