--- a/src/assets/i18n/components/input/ru.json
+++ b/src/assets/i18n/components/input/ru.json
@@ -89,6 +89,9 @@
   "authorLastNameLabel": "Фамилия автора",
   "authorLastNamePlaceholder": "Укажите фамилию автора",
   "authorLastNameDesc": "Фамилия будет отображаться на странице \"О нас\" и под статьями",
+  "authorTitleLabel": "Авторское звание",
+  "authorTitlePlaceholder": "Укажите звание автора",
+  "authorTitleDesc": "Название должно включать все, что может описать позицию",
   "authorDescLabel": "Описание автора",
   "authorDescPlaceholder": "Укажите описание автора",
   "authorDescDesc": "Описание автора — это пара предложений об авторе, которые будут отображаться только на странице \"О нас\"",
@@ -154,5 +157,6 @@
   "expPositionStartDateDesc": "Укажите дату начала работы на этой должности",
   "expPositionEndDateLabel": "Дата окончания работы на должности",
   "expPositionEndDatePlaceholder": "Укажите дату окончания работы на должности",
-  "expPositionEndDateDesc": "Укажите дату окончания работы на этой должности. Оставьте поле пустым, если вы все еще работаете там"
+  "expPositionEndDateDesc": "Укажите дату окончания работы на этой должности. Оставьте поле пустым, если вы все еще работаете там",
+  "wrongFQDN": "Неверное полное доменное имя (URL)"
 }
