--- a/src/assets/i18n/messages/errors/en.json
+++ b/src/assets/i18n/messages/errors/en.json
@@ -91,7 +91,9 @@
     "wrong-position-desc-length": "Wrong position description length",
     "wrong-social-title-format": "Wrong social title format",
     "wrong-social-title-length": "Wrong social title length",
-    "wrong-social-id-format": "Wrong social ID format"
+    "wrong-social-id-format": "Wrong social ID format",
+    "wrong-author-title-format": "Wrong author title format",
+    "wrong-author-title-length": "Wrong author title length"
   },
   "wrong-timeframe": "Wrong timeframe",
   "invalid-recovery-keys": "Invalid recovery keys",
