--- a/src/assets/i18n/messages/errors/pl.json
+++ b/src/assets/i18n/messages/errors/pl.json
@@ -93,7 +93,8 @@
     "wrong-social-title-length": "Nieprawidłowa długość tytułu społecznościowego",
     "wrong-social-id-format": "Nieprawidłowy format identyfikatora społecznościowego",
     "wrong-author-title-format": "Nieprawidłowy format tytułu autora",
-    "wrong-author-title-length": "Nieprawidłowa długość tytułu autora"
+    "wrong-author-title-length": "Nieprawidłowa długość tytułu autora",
+    "wrong-authors-length": "Nieprawidłowa długość autora"
   },
   "wrong-timeframe": "Niewłaściwy przedział czasowy",
   "invalid-recovery-keys": "Nieprawidłowe klucze odzyskiwania",
