--- a/src/assets/i18n/messages/responses/ru.json
+++ b/src/assets/i18n/messages/responses/ru.json
@@ -25,5 +25,7 @@
   "experience-status-updated": "Статус опыта успешно обновлен",
   "social-created": "Ссылка на социальную сеть успешно создана",
   "social-updated": "Ссылка на социальную сеть успешно обновлена",
-  "social-deleted": "Ссылка на социальную сеть успешно удалена"
+  "social-deleted": "Ссылка на социальную сеть успешно удалена",
+  "author-created": "Автор успешно создан",
+  "certification-created": "Сертификация успешно создана"
 }
