--- a/src/assets/i18n/messages/errors/ru.json
+++ b/src/assets/i18n/messages/errors/ru.json
@@ -94,7 +94,8 @@
     "wrong-social-id-format": "Неверный формат социального идентификатора",
     "wrong-author-title-format": "Неправильный формат названия автора",
     "wrong-author-title-length": "Неправильная длина названия автора",
-    "wrong-authors-length": "Неправильная длина автора"
+    "wrong-authors-length": "Неправильная длина автора",
+    "wrong-certifications-length": "Неправильная длина сертификатов"
   },
   "wrong-timeframe": "Неверный таймфрейм",
   "invalid-recovery-keys": "Недействительные ключи восстановления",
