--- a/src/assets/i18n/messages/responses/pl.json
+++ b/src/assets/i18n/messages/responses/pl.json
@@ -27,5 +27,6 @@
   "social-updated": "Link społecznościowy został pomyślnie zaktualizowany",
   "social-deleted": "Link społecznościowy został pomyślnie usunięty",
   "author-created": "Autor został pomyślnie utworzony",
-  "certification-created": "Certyfikacja została pomyślnie utworzona"
+  "certification-created": "Certyfikacja została pomyślnie utworzona",
+  "experience-created": "Doświadczenie zostało stworzone"
 }
