--- a/src/assets/i18n/messages/responses/ru.json
+++ b/src/assets/i18n/messages/responses/ru.json
@@ -27,5 +27,6 @@
   "social-updated": "Ссылка на социальную сеть успешно обновлена",
   "social-deleted": "Ссылка на социальную сеть успешно удалена",
   "author-created": "Автор успешно создан",
-  "certification-created": "Сертификация успешно создана"
+  "certification-created": "Сертификация успешно создана",
+  "experience-created": "Опыт был создан"
 }
